--- a/start.html
+++ b/start.html
@@ -10,5 +10,6 @@
     <h1>ak2 pr baire jamu</h1>
     <h2>Sby valo hoia ja</h2>
     <p>ajk chin up  marum, ajk push up marum,ajk back marum , biceps marum, triceps marum</p>
+    <img src="imam.jpg" alt="">
 </body>
 </html>
