--- a/start.html
+++ b/start.html
@@ -10,6 +10,11 @@
     <h1>ak2 pr baire jamu</h1>
     <h2>Sby valo hoia ja</h2>
     <p>ajk chin up  marum, ajk push up marum,ajk back marum , biceps marum, triceps marum</p>
+    <div><h3>new blog</h3>
+        <h5>lookkk mama! i am writing somthing
+            
+        </h5>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis, vel. Deleniti aliquam asperiores autem, impedit accusantium ratione obcaecati minus ad porro quaerat, mollitia nobis tempore ex blanditiis culpa, natus earum. Odio dicta voluptatum iure veniam architecto enim inventore magni ex.</p></div>
     <img src="imam.jpg" alt="">
 </body>
 </html>
